--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trackPlayer",
+  "name": "music M&N",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-progress": "^4.1.2",
+    "react-native-track-player": "^1.2.7",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
